  - `-p|--process` option
- Require Java 17+ instead of Java 11+
  - With GraalVM instead of Nashorn for JS evaluation
- Use logback instead of log4j for logging
- Support `empty` literal in DSLs wherever `blank` is accepted
- Make all input data read only by default
- Add `--repl` option to open REPL regardless of batch and feature options
- Internal engine enhancements
  - Replace internal stack of data caches with a single data cache
  - Manage settings internally without exposing them as system properties
  - Implicits managed at lifecycle level
  - Improved scope boundaries
- Add settings(s):
  - `gwen.input.data.readOnly`
- Add implicit variable(s):
  - `gwen.process.name`
- Add environment variable(s)
  - `GWEN_PROCESS`
- Add DSL step(s):
   -`I attach "<filepath>"`
     - For attaching files to Gwen reports (where the name of the attachment will be the name of the file)
- Drop deprecated features:
  - Gwen Workspaces warning
  - `-p|--properties` option
  - Report portal integration
  - Matrix tables
  - Core DSL steps
    - `I wait <duration> second[s] when <element> is <actioned>`
    - `I wait until <condition> when <element> is <actioned>`
  - Core DSL steps in favour of base step with `@Timeout` and `@Delay` annotations
    - `<step> <until|while> <condition> using <delay> <delayUnit> delay`
    - `<step> <until|while> <condition> using <timeout> <timeoutUnit> timeout`
    - `<step> <until|while> <condition> using <delay> <delayUnit> delay and <timeout> <timeoutUnit> timeout`
    - `<step> <until|while> <condition> using no delay and <timeout> <timeoutUnit> timeout`
    - `<step> <until|while> <condition> using no delay`
    - `<step> <until|while> <condition> using no delay and <timeout> <timeoutUnit> timeout`
- Raise deprecations as errors by default instead of logged them as warnings
  | Setting                     | Old default | New default |
  | :-------------------------- | :---------: | :---------: |