@@ -51,7 +51,7 @@ Feature: Match and extract JSON templates
           {"id":42,"category":{"name":"pet"},"name":"tiger","status":"available"}
           """
      When I capture my value as contents
-     Then contents should match template "{"id":!{},"category":{"name":"pet"},"name":"@{pet name}","status":"${my pet status}"}"
+     Then contents should match template "{"id":@{*},"category":{"name":"pet"},"name":"@{pet name}","status":"${my pet status}"}"
       And category name should be absent
       And pet id should be absent
       And pet name should be "tiger"
@@ -78,7 +78,7 @@ Feature: Match and extract JSON templates
             "category": {
               "name": "@{category name}"
             },
-            "name": "!{}",
+            "name": "@{*}",
             "status": "${my pet status}"
           }
           """
@@ -107,6 +107,7 @@ Feature: Match and extract JSON templates
               "name": "pet"
             },
             "name": "tiger",
+            "alias": "tigger",
             "status": "available"
           }
           """
