@@ -3,6 +3,7 @@
   "category": {
     "name": "@{category name 2}"
   },
-  "name": "!{}",
+  "name": "@{*}",
+  @{*}
   "status": "${my pet status}"
 }
