@@ -1,1 +1,1 @@
-{"id":!{},"category":{"name":"pet"},"name":"@{pet name 1}","status":"${my pet status}"}
+{"id":@{*},"category":{"name":"pet"},"name":"@{pet name 1}","status":"${my pet status}"}
