@@ -3,6 +3,6 @@
     <category>
         <name>@{category name 2}</name>
     </category>
-    <name>!{}</name>
+    <name>@{*}</name>
     <status>${my pet status}</status>
 </result>
