@@ -1,1 +1,1 @@
-<result><id>!{}</id><category><name>pet</name></category><name>@{pet name 1}</name><status>${my pet status}</status></result>
+<result><id>@{*}</id><category><name>pet</name></category><name>@{pet name 1}</name><status>${my pet status}</status></result>
